--- a/.github/workflows/schedules.yml
+++ b/.github/workflows/schedules.yml
@@ -37,5 +37,10 @@ jobs:
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add README.md
-          git commit -m "Update gists list"
-          git push
+          if git diff --cached --exit-code > /dev/null; then
+            echo "No changes detected, skipping commit and push."
+          else
+            echo "Changes detected, committing and pushing."
+            git commit -m "Update gists list"
+            git push
+          fi
